<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">stammer</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_topic_5">TOPIC-5</string>
<string name="lbl_topic_4">TOPIC-4</string>
<string name="lbl_topic_3">TOPIC-3</string>
<string name="lbl_topic_2">TOPIC -2</string>
<string name="msg_by_clicking_reg">By clicking Register, you agree to our Data Policy and Cookie Policy. </string>
<string name="lbl_topic_1">TOPIC-1</string>
<string name="lbl_phone_no">Phone No.</string>
<string name="lbl_your_results">YOUR RESULTS</string>
<string name="msg_login_your_acco">Login your account</string>
<string name="msg_create_a_new_ac">Create a New Account</string>
<string name="lbl_phone">Phone</string>
<string name="lbl_or_login_with">Or login with</string>
<string name="lbl_home">Home</string>
<string name="lbl_date_of_birth">Date of Birth</string>
<string name="lbl_first_name">First Name</string>
<string name="msg_your_one_stop_f">YOUR ONE STOP FOR ALL THE RESOURCES NEEDED TO CURE YOUR STAMMERING. PLEASE SHARE AND LIKE THIS APPLICATION</string>
<string name="lbl_topic_four">TOPIC Four</string>
<string name="lbl_female">Female</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_course_page">course page</string>
<string name="lbl_log_in">Log In</string>
<string name="lbl_topic_one">TOPIC One</string>
<string name="lbl_topic_five">TOPIC Five</string>
<string name="lbl_splash">Splash</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_welcome2">WELCOME!!!!!</string>
<string name="lbl_male">Male</string>
<string name="lbl_topic_three">TOPIC Three</string>
<string name="lbl_clear_all">Clear All</string>
<string name="msg_this_course_wil2">THIS COURSE WILL HELP IN CURING ALL YOUR  STAMMERING AND HELP YOU LEAD VERY CONFIDENT LIFE AND FORWARD LIFE.</string>
<string name="lbl_ram_gmail_com">Ram@gmail.com</string>
<string name="lbl_join_quick">JOIN QUICK!!!!!</string>
<string name="lbl_profile">Profile</string>
<string name="msg_taught_by_heman">TAUGHT BY HEMANTH.K</string>
<string name="lbl_username">Username</string>
<string name="lbl_email_id">Email Id</string>
<string name="lbl_end_course">END COURSE</string>
<string name="lbl_recently">Recently</string>
<string name="lbl_done">Done</string>
<string name="lbl_course_showcase">COURSE SHOWCASE</string>
<string name="msg_this_course_wil">THIS COURSE WILL HELP IN CURING ALL YOUR STAMMERING AND HELP YOU LEAD VERY CONFIDENT LIFE AND FORWARD LIFE.</string>
<string name="lbl_email">Email</string>
<string name="lbl_91_xxxxxxxxxx">+91 XXXXXXXXXX</string>
<string name="lbl_date_of_birth2">Date of birth</string>
<string name="lbl_search">Search</string>
<string name="lbl_last_name">Last Name</string>
<string name="lbl_gender">Gender</string>
<string name="msg_it_s_fast_and_e">It\u2019s fast and easy</string>
<string name="lbl_topic_12">TOPIC -1</string>
<string name="lbl_21_08_1992">21/08/1992</string>
<string name="msg_detailed_profil">Detailed Profile</string>
<string name="msg_stammering_cour">STAMMERING COURSE</string>
<string name="lbl_topic_two">TOPIC Two</string>
<string name="lbl_welcome">WELCOME</string>
<string name="lbl_stammering_cure">STAMMERING CURE</string>
<string name="lbl_login_screen">Login Screen</string>
<string name="lbl_home_page">HOME PAGE</string>
<string name="lbl_open">OPEN</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="msg_stammering_cur">STAMMERING  CURE</string>
<string name="lbl_password">Password</string>
<string name="lbl_ram_varma">Ram Varma</string>
<string name="msg_the_perfect_cou">The perfect course for any person to cure 
their stammering. This course has the top
resources and has a effective method to 
cure stammering.</string>
<string name="lbl_topic_22">TOPIC-2</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
