<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="detailedProfileVM" type="com.stammer.app.modules.detailedprofile.data.viewmodel.DetailedProfileVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnarrowleft"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_9pxv"
        android:layout_marginTop="@dimen/_17pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_deep_purple_a200"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_deep_purple_a200"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDone"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_321pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.72"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{detailedProfileVM.detailedProfileModel.txtDone}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_done"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearDetailedProfil"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end"
                android:id="@+id/txtProfile"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{detailedProfileVM.detailedProfileModel.txtProfile}"
                style="@style/txtInterbold32_1" tools:text="@string/lbl_profile"/>
            <FrameLayout android:gravity="start"
                android:id="@+id/frameStackrectangle3782"
                android:layout_height="@dimen/_513pxv"
                android:layout_marginTop="@dimen/_23pxv" android:layout_width="match_parent">
                <LinearLayout
                    android:id="@+id/linearColumnrectangle3782"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <View android:background="@color/deep_purple_50"
                        android:id="@+id/lineRectangle3782"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_2pxv" android:layout_width="@dimen/_414pxh"/>
                    <LinearLayout android:id="@+id/linearRowusername"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_202pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtUsername"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.47"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtUsername}"
                            style="@style/txtInterregular18" tools:text="@string/lbl_username"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtRosalia"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_198pxh"
                            android:layout_weight="0.53"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtRosalia}"
                            style="@style/txtInterregular18_1" tools:text="@string/lbl_ram_varma"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linearRowemail"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_33pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtEmail"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_weight="0.25"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtEmail}"
                            style="@style/txtInterregular18" tools:text="@string/lbl_email"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtEmailOne"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_195pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.75"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtEmailOne}"
                            style="@style/txtInterregular18_1" tools:text="@string/lbl_ram_gmail_com"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linearRowphone"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_32pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPhone"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.26"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtPhone}"
                            style="@style/txtInterregular18" tools:text="@string/lbl_phone"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPrice"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginStart="@dimen/_175pxh"
                            android:layout_weight="0.74"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtPrice}"
                            style="@style/txtInterregular18_1" tools:text="@string/lbl_91_xxxxxxxxxx"/>
                    </LinearLayout>
                    <View android:background="@color/deep_purple_50"
                        android:id="@+id/lineRectangle3783"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_2pxv"
                        android:layout_marginTop="@dimen/_41pxv" android:layout_width="@dimen/_414pxh"/>
                    <LinearLayout android:id="@+id/linearRowgender"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_32pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtGender"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_weight="0.61"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtGender}"
                            style="@style/txtInterregular18" tools:text="@string/lbl_gender"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtGenderOne"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_278pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.39"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtGenderOne}"
                            style="@style/txtInterregular18_1" tools:text="@string/lbl_male"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linearRowdateofbirth"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_33pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtDateofbirth"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_weight="0.53"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtDateofbirth}"
                            style="@style/txtInterregular18" tools:text="@string/lbl_date_of_birth2"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtDate"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_177pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.47"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{detailedProfileVM.detailedProfileModel.txtDate}"
                            style="@style/txtInterregular18_1" tools:text="@string/lbl_21_08_1992"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView android:id="@+id/imageRamOne"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_226pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_130pxh"
                    android:layout_marginStart="@dimen/_130pxh"
                    android:layout_width="@dimen/_154pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ram1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ram1"/>
            </FrameLayout>
        </LinearLayout>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylewhite_A700cornerRadius">
            <LinearLayout android:id="@+id/linearRowhome"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearColumnhome"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageHome"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_width="@dimen/_22pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_home"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtHomeOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{detailedProfileVM.detailedProfileModel.txtHomeOne}"
                        style="@style/txtInterregular10" tools:text="@string/lbl_home"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnuser"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageUser"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_21pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtProfileOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{detailedProfileVM.detailedProfileModel.txtProfileOne}"
                        style="@style/txtInterregular10" tools:text="@string/lbl_profile"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
