<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="searchVM" type="com.stammer.app.modules.search.data.viewmodel.SearchVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnclose"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_372pxv"
        android:layout_marginTop="@dimen/_16pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearSearch"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:id="@+id/imageClose"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_close"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSearch"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_41pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{searchVM.searchModel.txtSearch}"
                    style="@style/txtInterbold32_1" tools:text="@string/lbl_search"/>
                <EditText
                    android:background="@drawable/rectangle_bg_gray_100_radius_20"
                    android:drawableEnd="@drawable/drawable_img_search"
                    android:ellipsize="end"
                    android:hint="@string/lbl_search"
                    android:id="@+id/etGroup9116"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingEnd="@dimen/_16pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={searchVM.searchModel.etGroup9116Value}"
                    android:textColorHint="@color/gray_400"
                    style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
                <LinearLayout android:id="@+id/linearRowrecently"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtRecently"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.58"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{searchVM.searchModel.txtRecently}"
                        style="@style/txtInterbold20" tools:text="@string/lbl_recently"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtClearAll"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginStart="@dimen/_231pxh"
                        android:layout_weight="0.42"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{searchVM.searchModel.txtClearAll}"
                        style="@style/txtIntermedium16_1" tools:text="@string/lbl_clear_all"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearRowellipsefive"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageEllipseFive"
                        android:layout_height="@dimen/_50pxh"
                        android:layout_width="@dimen/_50pxh"
                        android:scaleType="centerCrop"
                        circular="@{true}"
                        imageRes="@{@drawable/img_ellipse5}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse5"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnprice"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_weight="0.64"
                        android:layout_width="0dp" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPrice"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{searchVM.searchModel.txtPrice}"
                            style="@style/txtIntersemibold20" tools:text="@string/msg_stammering_cour"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtYourefriends"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_9pxv"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@{searchVM.searchModel.txtYourefriends}"
                            style="@style/txtInterregular14_2" tools:text="@string/lbl_join_quick"/>
                    </LinearLayout>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnOpen"
                        android:layout_height="@dimen/_33pxv"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_width="@dimen/_76pxh"
                        android:paddingBottom="@dimen/_9pxv"
                        android:paddingEnd="@dimen/_21pxh"
                        android:paddingStart="@dimen/_16pxh"
                        android:paddingTop="@dimen/_9pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_open"
                        android:textAllCaps="false"
                        style="@style/btnRoundedOutline_1" tools:text="@string/lbl_open"/>
                </LinearLayout>
                <View android:background="@color/deep_purple_50"
                    android:id="@+id/lineRectangle3772"
                    android:layout_height="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_414pxh"/>
                <View android:background="@color/deep_purple_50"
                    android:id="@+id/lineRectangle3773"
                    android:layout_height="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_82pxv" android:layout_width="@dimen/_414pxh"/>
                <View android:background="@color/deep_purple_50"
                    android:id="@+id/lineRectangle3774"
                    android:layout_height="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_82pxv" android:layout_width="@dimen/_414pxh"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
